--- a/styleV-Card.css
+++ b/styleV-Card.css
@@ -27,10 +27,10 @@ body{
 /*colocar id nesse botao e organizar todas as cores respectivamento*/
 
 }
-.v-butao:hover{
 
-}
-.v-card{
+    
+
+.v-card1{
     background-color:#1e6bb7 ;
     border-radius: 6px;
     display: flex;
@@ -39,52 +39,94 @@ body{
     height: 100%;
     justify-content: center;
     left: 0;
-    padding: 30px 60px;
+    padding: 0px 60px;
     position: absolute;
     top: 0;
     width: 100%;
-
 }
-#instagram{
-    background-color:  #de185a;
-.v-butao{background:linear-gradient(45deg, #405DE6, #5851DB, #833AB4, #C13584,#ff0458 ); }
-
-
-}
-#github{
-    color: white;
-    background-color: black;
-.v-butao{background-color:#f5f5f5; }
-
-}
-#linkedin{
-    background-color:  #3484d4;
-.v-butao{background-color:#91b0ce; }
-
-}
-.v-card_titulo{
-    font-weight: normal;
-    line-height: 1;
-}
-.v-menu{
-    align-items: flex-end;
-    bottom: 0;
-    display: flex;
-    height: 18px;
-    list-style: none;
-    margin: 0;
-    padding: 55px;
+.img{
+    height: 100%;
+    width: 100%;
     position: absolute;
-    right: 0;
+    right: -70px;
+    background-position: right;
+    background-image: url(Imagens/bk-li2.webp);
+}
+.b-lID{
+    border-radius: 10px;
+    width: 100px;
+    position: absolute;
+    left: 155px;
+   
+}
 
+.b-lID:active{background-color: #0f7eed;}
+.b-lID:hover{cursor: pointer;}
+
+.button > p{
+    position: absolute;
+    left: 190px;
+    margin: -30px;
+    font-size: 15pt;
 }
-.menu,.insta ,.gt, .linkedIn {
-    background-color:transparent;
-    border: none;
-   align-items: end;
-   justify-content: end;
-    margin-left:11px;
+#v-card2{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 1010px;
+    background-color:  #E1306C;
+    
 }
-.menu,.insta ,.gt, .linkedIn:hover{
-    cursor: pointer;
+.insta-card{
+
+    height: 97%;
+      width:40%;  
+    background-image: url(Imagens/pexels-omkarpatyane-238480.jpg);
+background-position: center;
+background-size: cover;
+border-radius: 0px 75px;}
+
+
+.insta-card > p{
+    font-size: 15pt;
+    position: absolute;
+  margin: 150px;
+    left: 425px;
 }
+.b-IST{
+    border-radius: 10px;
+    width: 100px;
+    position: absolute;
+    left: 395px;
+    margin: 180px;
+}
+.github{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 2020px;
+    background-color:  #000000;
+    background-image: url(Imagens/bannerGH.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-size: 100% 50%;
+}
+.b-GH{
+    border-radius: 10px;
+    width: 100px;
+    position: absolute;
+    left: 395px;
+    margin: 280px;
+}
+.GH{
+    color: white;
+    position: absolute;
+    left: 335px;
+    margin: 330px;
+   width: 250px;
+   font-size: 15pt;
+}
+
+
