--- a/styleV-Card.css
+++ b/styleV-Card.css
@@ -1,4 +1,23 @@
 @charset "UTF-8";
+
+
+ @-webkit-keyframes shadow-pop-br {
+    0% {
+      -webkit-box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
+              box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
+      -webkit-transform: translateX(0) translateY(0);
+              transform: translateX(0) translateY(0);
+    }
+    100% {
+      -webkit-box-shadow: 1px 1px #3e3e3e, 2px 2px #3e3e3e, 3px 3px #3e3e3e, 4px 4px #3e3e3e, 5px 5px #3e3e3e, 6px 6px #3e3e3e, 7px 7px #3e3e3e, 8px 8px #3e3e3e;
+              box-shadow: 1px 1px #3e3e3e, 2px 2px #3e3e3e, 3px 3px #3e3e3e, 4px 4px #3e3e3e, 5px 5px #3e3e3e, 6px 6px #3e3e3e, 7px 7px #3e3e3e, 8px 8px #3e3e3e;
+      -webkit-transform: translateX(-8px) translateY(-8px);
+              transform: translateX(-8px) translateY(-8px);
+    }
+  }
+  
+
+
 header{
     color: rgb(0, 0, 0);
     background-color: #C0C0C0;
@@ -25,12 +44,32 @@ main > article >h1{
     background-color: #646262;
     margin: 3px;
 }
+a{
+    color: #000000;
+    text-decoration: none;
+}
+.icon{
+    padding: 15px;
+    display: block; 
+    color: #000000;
+}
+#icone:hover{
+    cursor: pointer;
+}
+#icone:active{
+    transform: translateY(10px);
+
+}
+
+main{
+    height: 100vh;
+    width: 100vw;
+}
 footer{
-  
-    margin: 45px;
     position: absolute;
-    bottom: 0;
-    font-size: 16pt;
+    margin-top: 70%;
+    width: 100%;
+    margin-bottom: 0px;
     padding: 10px;
     text-align: center;
     color: white;
@@ -90,8 +129,9 @@ box-shadow:6px 6px 14px rgba(0, 0, 0, 0.732);
 
 /* fim do insta*/
 .linkedIn{
+    margin-bottom: 96px;
     border-radius: 10px;
-    position: absolute;
+    position: relative;
     margin-top:190px ;
     background-color: #3e5be9;
     width: 290px;
@@ -123,5 +163,62 @@ box-shadow:6px 6px 14px rgba(0, 0, 0, 0.732);
 }
 /*===============FIM LINKEDIN===================*/
 
+@media screen and (min-width:1023px) {
+    .container{
+        display: flex;
+        flex-direction: row;
+        background-color: gray;
+        width: 790px;
+        height: 550px;
+        position: absolute;
+        left:  30% ;
+        margin-top: 50px;
+    border-radius: 10px;
+    box-shadow:6px 6px 14px rgba(0, 0, 0, 0.732);
+    }
+    .instagram{
+        width: 55%;
+        height: 100%;
+
+    }
+    .button{
+        position: absolute;
+        left: 450px;
+        float: right;
+    }
+
+    .linkedIn{
+        margin-bottom: 96px;
+        border-radius: 10px;
+        position: relative;
+        margin-top:15% ;
+        background-color: #3e5be9;
+        width: 790px;
+        height: 550px;
+    box-shadow:6px 6px 14px rgba(0, 0, 0, 0.732);
+    
+    }
+    .li{
+        width: 113%;
+        height: 50%;
+        background-size: cover;
+        background-position: top center;
+        background-size: 100% 100%;
+        margin-top: 20px;
+        left: -47px;
+    }
+  .buttonLI{
+        position: absolute;
+        margin-top: 280px;
+        left: 250px;
+    }
+
+.container:hover{
+   animation-name:shadow-pop-br ;
+animation-duration: 1s;
+animation-iteration-count:infinite ;
+animation-direction: alternate; }
+
+}
 
 
